--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="gradient-background">
   <div class="flex items-center justify-center h-screen">
     <div class="flex flex-col items-center p-4">
-      <img id="imageDisplay" src="C:\Users\CCS\Desktop\images\image1.jpeg" class="rounded-md h-[300px]" style="object-fit: cover;" />
+      <img id="imageDisplay" src="C:\Users\CCS\Desktop\valentines\image1.jpeg" class="rounded-md h-[300px]" style="object-fit: cover;" />
       <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Will you be my Valentine?</h2>
       <div class="flex gap-4 pt-[20px] items-center" id="responseButtons">
         <button id="yesButton"
@@ -59,13 +59,13 @@
     let buttonWidth = 80;
     let fontSize = 20; // Starting font size in pixels
     const imagePaths = [
-      "./images/image1.gif",
-      "./images/image2.gif",
-      "./images/image3.gif",
-      "./images/image4.gif",
-      "./images/image5.gif",
-      "./images/image6.gif",
-      "./images/image7.gif"
+      "./images/image1.jpeg",
+      "./1.png",
+      "./2.gif",
+      "./3.jpg",
+      "./4.png",
+      "./5.png"
+      
     ];
   
     noButton.addEventListener('click', function() {
@@ -85,7 +85,7 @@
     });
   
     yesButton.addEventListener('click', () => {
-      imageDisplay.src = './images/image7.gif'; // Change to image7.gif
+      imageDisplay.src = "./6.gif"; // Change to 6.gif
       valentineQuestion.textContent = "OMGGG YAYYAYAYY"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
