--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
   
     yesButton.addEventListener('click', () => {
       imageDisplay.src = "./6.gif"; // Change to 6.gif
-      valentineQuestion.textContent = "OMGGG YAYYAYAYY"; // Change the question text
+      valentineQuestion.textContent = "OMGGG YAYYAYAYY I'LL TELL YOU THE PLAN SOON HEHEHE"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
     });
   </script>  
 </body>
 </html>
+
